# mopper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
mopper/: __init__.py  __main__.py  cli.py  linter.py
mopper/rules/: __init__.py  bare_except.py  mutable_default.py  singleton_comparison.py  unreachable_code.py  unused_import.py
tests/: test_rules.py
tests/fixtures/: broken.py
